@@ -5018,3 +5018,58 @@ AT_CHECK([./prog], [0],
 [Hello, world!
 ])
 AT_CLEANUP
+
+AT_SETUP([MOVE with -fbinary-truncate])
+AT_KEYWORDS([runmisc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION  DIVISION.
+       PROGRAM-ID.     prog.
+
+       DATA            DIVISION.
+       WORKING-STORAGE SECTION.
+       01  x PIC 9(4) COMP.
+       
+       PROCEDURE       DIVISION.
+           MOVE 30000 TO x
+           PERFORM check-x-val
+
+           COMPUTE x = 30000
+           PERFORM check-x-val
+
+           MOVE ZERO TO x
+           ADD 30000 TO x
+           PERFORM check-x-val
+
+           GOBACK
+           .
+       check-x-val     SECTION.
+           EVALUATE x
+               WHEN >= 10000
+                   DISPLAY "x >= 10000"
+
+               WHEN ZERO
+                   DISPLAY "x IS ZERO"
+
+               WHEN OTHER
+                   CONTINUE
+           END-EVALUATE
+           .
+       END PROGRAM prog.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([./prog], [0],
+[x IS ZERO
+x IS ZERO
+x IS ZERO
+])
+
+AT_CHECK([$COMPILE -fno-binary-truncate prog.cob], [0], [], [])
+AT_CHECK([./prog], [0],
+[x >= 10000
+x >= 10000
+x >= 10000
+])
+
+AT_CLEANUP
